--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lottery DApp</title>
+    <meta name="description" content="A decentralized lottery application built on Stacks blockchain.">
+    <meta name="keywords" content="Lottery, DApp, Stacks, Blockchain, Crypto">
+    <title>Meme Lottery</title>
     <script src="https://unpkg.com/@stacks/connect@latest/dist/connect.umd.js"></script>
     <script src="https://unpkg.com/@stacks/transactions@latest/dist/transactions.umd.js"></script>
     <script src="https://unpkg.com/@stacks/network@latest/dist/network.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sats-connect@latest/dist/sats-connect.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,9 +20,8 @@
             margin: 0;
             padding: 20px;
         }
-        h1, h2 {
-            color: #fff;
-            text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+        h1 {
+            color: #333;
         }
         form {
             margin: 20px 0;
@@ -38,6 +38,15 @@
             color: #fff;
             border: none;
             border-radius: 5px;
+        }
+        #connect-wallet {
+            background-color: #28a745;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
         }
         #info-container {
             display: flex;
@@ -57,9 +66,6 @@
         }
         #buy-ticket-container {
             text-align: center;
-            position: absolute;
-            right: 20px;
-            top: 20px;
         }
         #connected-address {
             margin-top: 20px;
@@ -129,13 +135,10 @@
         .submit-main .submit-box .submit-container .buttons-container button {
             width: 30%;
         }
-        #pie-chart-container {
-            margin-top: 20px;
-        }
     </style>
 </head>
 <body>
-    <h1>Lottery DApp</h1>
+    <h1>Meme Lottery</h1>
 
     <button id="connect-wallet">Connect Wallet</button>
 
@@ -143,7 +146,10 @@
 
     <div id="info-container">
         <div class="info-box">
-            <p>Remaining Time: <span id="countdown">02:00</span></p>
+            <p>Remaining Time: <span id="countdown">--:--</span></p>
+        </div>
+        <div class="info-box">
+            <p>Pool Amount: <span id="pool-amount">Loading...</span></p>
         </div>
     </div>
 
@@ -169,9 +175,6 @@
                 </form>
             </div>
         </div>
-        <div id="pie-chart-container">
-            <canvas id="pie-chart"></canvas>
-        </div>
     </div>
 
     <div id="end-round-container">
@@ -191,13 +194,7 @@
 
         const network = new StacksTestnet();
         let countdownInterval;
-        let poolAmount = 0;
-        let tokenContracts = {
-            "SP3NE50GEXFG9SZGTT51P40X2CKYSZ5CC4ZTZ7A2G.welshcorgicoin-token": 0,
-            "SP1AY6K3PQV5MRT6R4S671NWW2FRVPKM0BR162CT6.leo-token": 0,
-            "SP1N4EXSR8DP5GRN2XCWZEW9PR32JHNRYW7MVPNTA.PomerenianBoo-Pomboo": 0
-        };
-        let pieChart;
+        let roundEndTime;
 
         const { getAddress } = SatsConnect;
 
@@ -211,7 +208,7 @@
                         }
                     },
                     network: {
-                        type: 'Devnet' // Use 'Devnet' for development
+                        type: 'Testnet' // Change to 'Mainnet' for production
                     },
                     apiKey: "cf615e7cbcb9f7f6bad1344406db5e20",
                     onFinish: (response) => {
@@ -221,50 +218,22 @@
                 });
             } catch (error) {
                 console.error('Error connecting to wallet:', error);
+                alert('Failed to connect to wallet. Please try again.');
             }
         };
 
         async function fetchBlockHeight() {
             const response = await fetch(network.coreApiUrl + '/v2/info');
             const data = await response.json();
-            document.getElementById('block-height').innerText = data.stacks_tip_height;
+            document.getElementById('end-block-height').innerText = data.stacks_tip_height;
         }
 
-        function updatePoolAmountDisplay() {
-            const ctx = document.getElementById('pie-chart').getContext('2d');
-            const data = {
-                labels: [],
-                datasets: [{
-                    data: [],
-                    backgroundColor: []
-                }]
-            };
-
-            for (const [contract, amount] of Object.entries(tokenContracts)) {
-                if (amount > 0) {
-                    data.labels.push(contract);
-                    data.datasets[0].data.push(amount);
-                    data.datasets[0].backgroundColor.push(getRandomColor());
-                }
-            }
-
-            if (pieChart) {
-                pieChart.destroy();
-            }
-
-            pieChart = new Chart(ctx, {
-                type: 'pie',
-                data: data
-            });
-        }
-
-        function getRandomColor() {
-            const letters = '0123456789ABCDEF';
-            let color = '#';
-            for (let i = 0; i < 6; i++) {
-                color += letters[Math.floor(Math.random() * 16)];
-            }
-            return color;
+        async function fetchPoolAmount() {
+            // Replace with actual logic to fetch pool amount
+            document.getElementById('pool-amount').innerText = 'Fetching...';
+            setTimeout(() => {
+                document.getElementById('pool-amount').innerText = '1000 STX'; // Example value
+            }, 1000);
         }
 
         async function submitTransaction(functionName, functionArgs) {
@@ -286,10 +255,18 @@
             event.preventDefault();
             const tokenContract = document.getElementById('token-contract').value;
             const tokenAmount = parseInt(document.getElementById('token-amount').value);
-            tokenContracts[tokenContract] += tokenAmount;
-            updatePoolAmountDisplay();
+            if (isNaN(tokenAmount) || tokenAmount <= 0) {
+                alert('Please enter a valid amount.');
+                return;
+            }
             submitTransaction('buy-ticket', [principalCV(tokenContract), uintCV(tokenAmount)]);
+            startNewRoundCountdown();
         };
+
+        function startNewRoundCountdown() {
+            roundEndTime = Date.now() + 120 * 1000; // Set end time to 2 minutes from now
+            startCountdown(120); // Start 2-minute countdown
+        }
 
         function showWinner(blockHeight, winner) {
             document.getElementById('end-block-height').innerText = blockHeight;
@@ -300,19 +277,18 @@
         function startCountdown(duration) {
             clearInterval(countdownInterval);
             let timer = duration, minutes, seconds;
-            countdownInterval = setInterval(async () => {
-                minutes = parseInt(timer / 60, 10);
-                seconds = parseInt(timer % 60, 10);
+            countdownInterval = setInterval(() => {
+                const timeRemaining = roundEndTime - Date.now();
+                if (timeRemaining <= 0) {
+                    clearInterval(countdownInterval);
+                    endRoundAndSelectWinner(); // Automatically end the round and select the winner
+                    return;
+                }
+                minutes = parseInt(timeRemaining / 60000, 10);
+                seconds = parseInt((timeRemaining % 60000) / 1000, 10);
                 minutes = minutes < 10 ? "0" + minutes : minutes;
                 seconds = seconds < 10 ? "0" + seconds : seconds;
                 document.getElementById('countdown').innerText = `${minutes}:${seconds}`;
-                if (--timer < 0) {
-                    clearInterval(countdownInterval);
-                    await endRoundAndSelectWinner();
-                    setTimeout(() => {
-                        startCountdown(120); // Restart 2-minute countdown
-                    }, 5000);
-                }
             }, 1000);
         }
 
@@ -345,7 +321,10 @@
         fetchBlockHeight();
         setInterval(fetchBlockHeight, 60000); // Update block height every minute
 
-        startCountdown(120); // Automatically start 2-minute countdown
+        fetchPoolAmount();
+        setInterval(fetchPoolAmount, 60000); // Update pool amount every minute
+
+        startCountdown(120); // Start 2-minute countdown on page load for demonstration
     </script>
 </body>
 </html>
